# Modern-AlChemy

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  pyproject.toml  test_alchemy.py
.github/: copilot-instructions.md
default/: config.json
scripts/: discovery.sh  kinetics.sh  sol.sh
scripts/sawtooths/: add-batched.sh  add-sawtooth.sh  add-skip.sh  addtwo-sawtooth.sh  scc-sawtooth.sh
src/: Untitled-1.txt  Updated_ReadMe.md  analysis.rs  collidable.rs  config.rs  experiments.rs  generators.rs  lambda.rs  lib.rs  main.rs  python.rs  soup.rs  supercollider.rs  utils.rs
src/experiments/: discovery.rs  distribution.rs  entropy.rs  kinetics.rs  magic_test_function.rs  mod.rs  search_by_behavior.rs
src/lambda/: core.rs  lambda.rs  mod.rs  recursive.rs
